--- a/buy-files/italy.html
+++ b/buy-files/italy.html
@@ -49,7 +49,7 @@
             <h2>Naples Properties</h2>
             <div class="properties-container">
                 <div class="estate-photo">
-                    <img src="../photos/naples-house-one.jpeg">
+                    <img src="../photos/naples-house-one.jpeg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
@@ -66,7 +66,7 @@
             </div>
             <div class="properties-container-naples-house-2">
                 <div class="estate-photo">
-                    <img src="../photos/naples-photo.jpeg">
+                    <img src="../photos/naples-photo.jpeg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
@@ -83,7 +83,7 @@
             </div>
             <div class="properties-container-naples-house-three">
                 <div class="estate-photo">
-                    <img src="../photos/sunny-naples.jpeg">
+                    <img src="../photos/sunny-naples.jpeg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
