--- a/html-files/rent.html
+++ b/html-files/rent.html
@@ -223,7 +223,7 @@
                         </div>
                         <div class="property">
                             <a href="property-detail.html">
-                                <img src="/photos/ap8.jpg" alt="" width="485px"height="350px;">
+                                <img src="/photos/ap8.jpg" alt="picture of interior of a apratment we have for rent" width="485px"height="350px;">
                                 <div class="property-text">
                                     <h2>Property Name</h2>
                                     <p>Location</p>
@@ -234,7 +234,7 @@
                         </div>
                         <div class="property">
                             <a href="property-detail.html">
-                                <img src="/photos/ap9.jpg" alt="" width="485px"height="350px;">
+                                <img src="/photos/ap9.jpg" alt="picture of interior of a apratment we have for rent" width="485px"height="350px;">
                                 <div class="property-text">
                                     <h2>Property Name</h2>
                                     <p>Location</p>
@@ -245,7 +245,7 @@
                         </div>
                         <div class="property">
                             <a href="property-detail.html">
-                                <img src="/photos/ap10.jpg" alt="" width="485px"height="350px;">
+                                <img src="/photos/ap10.jpg" alt="picture of interior of a apratment we have for rent" width="485px"height="350px;">
                                 <div class="property-text">
                                     <h2>Property Name</h2>
                                     <p>Location</p>
@@ -256,7 +256,7 @@
                         </div>
                         <div class="property">
                             <a href="property-detail.html">
-                                <img src="/photos/ap11.jpg" alt="" width="485px"height="350px;">
+                                <img src="/photos/ap11.jpg" alt="picture of interior of a apratment we have for rent" width="485px"height="350px;">
                                 <div class="property-text">
                                     <h2>Property Name</h2>
                                     <p>Location</p>
@@ -267,7 +267,7 @@
                         </div>
                         <div class="property">
                             <a href="property-detail.html">
-                                <img src="/photos/ap12.jpg" alt="" width="485px"height="350px;">
+                                <img src="/photos/ap12.jpg" alt="picture of interior of a apratment we have for rent" width="485px"height="350px;">
                                 <div class="property-text">
                                     <h2>Property Name</h2>
                                     <p>Location</p>
@@ -278,7 +278,7 @@
                         </div>
                         <div class="property">
                             <a href="property-detail.html">
-                                <img src="/photos/ap13.jpg" alt="" width="485px"height="350px;">
+                                <img src="/photos/ap13.jpg" alt="picture of interior of a apratment we have for rent" width="485px"height="350px;">
                                 <div class="property-text">
                                     <h2>Property Name</h2>
                                     <p>Location</p>
@@ -289,7 +289,7 @@
                         </div>
                         <div class="property">
                             <a href="property-detail.html">
-                                <img src="/photos/ap14.webp" alt="" width="485px"height="350px;">
+                                <img src="/photos/ap14.webp" alt="picture of interior of a apratment we have for rent" width="485px"height="350px;">
                                 <div class="property-text">
                                     <h2>Property Name</h2>
                                     <p>Location</p>
@@ -300,7 +300,7 @@
                         </div>
                         <div class="property">
                             <a href="property-detail.html">
-                                <img src="/photos/ap15.jpg" alt="" width="485px" height="350px;">
+                                <img src="/photos/ap15.jpg" alt="picture of interior of a apratment we have for rent" width="485px" height="350px;">
                                 <div class="property-text">
                                     <h2>Property Name</h2>
                                     <p>Location</p>
