--- a/buy-files/italy.html
+++ b/buy-files/italy.html
@@ -387,7 +387,7 @@
             </div>
             <div class="properties-container-florence-last">
                 <div class="estate-photo">
-                    <img src="../photos/4590129-01.jpg">
+                    <img src="../photos/4590129-01.jpg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
