--- a/buy-files/switzerland.html
+++ b/buy-files/switzerland.html
@@ -49,7 +49,7 @@
             <h2>Geneva Properties</h2>
             <div class="properties-geneva">
                 <div class="estate-photo">
-                    <img src="../photos/mansionmain1.jpg">
+                    <img src="../photos/mansionmain1.jpg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
@@ -66,7 +66,7 @@
             </div>
             <div class="properties-geneva-house">
                 <div class="estate-photo">
-                    <img src="../photos/35_W3245_Snake_Rd_2039_Print__1_.0.jpg">
+                    <img src="../photos/35_W3245_Snake_Rd_2039_Print__1_.0.jpg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
@@ -83,7 +83,7 @@
             </div>
             <div class="properties-geneva-house-one">
                 <div class="estate-photo">
-                    <img src="../photos/590-S-Lake-Shore-Dr-Lake-Geneva-2021-04-12-realtordotcom.jpg">
+                    <img src="../photos/590-S-Lake-Shore-Dr-Lake-Geneva-2021-04-12-realtordotcom.jpg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
