--- a/buy-files/switzerland.html
+++ b/buy-files/switzerland.html
@@ -100,7 +100,7 @@
             </div>
             <div class="properties-geneva-house-two">
                 <div class="estate-photo">
-                    <img src="../photos/article-2385290-1B2ACA5B000005DC-736_964x630.jpg">
+                    <img src="../photos/article-2385290-1B2ACA5B000005DC-736_964x630.jpg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
@@ -117,7 +117,7 @@
             </div>
             <div class="properties-geneva-house-last">
                 <div class="estate-photo">
-                    <img src="../photos/maxresdefault.jpg">
+                    <img src="../photos/maxresdefault.jpg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
@@ -138,7 +138,7 @@
             <h2>Zurich Properties</h2>
             <div class="zurich-proerpties">
                 <div class="estate-photo">
-                    <img src="../photos/eight.jpeg">
+                    <img src="../photos/eight.jpeg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
@@ -155,7 +155,7 @@
             </div>
             <div class="properties-zurich">
                 <div class="estate-photo">
-                    <img src="../photos/eleven.webp">
+                    <img src="../photos/eleven.webp" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
@@ -172,7 +172,7 @@
             </div>
             <div class="property-zurich">
                 <div class="estate-photo">
-                    <img src="../photos/fifteen.webp">
+                    <img src="../photos/fifteen.webp" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
@@ -189,7 +189,7 @@
             </div>
             <div class="properties-zurich-house">
                 <div class="estate-photo">
-                    <img src="../photos/five.jpeg">
+                    <img src="../photos/five.jpeg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
@@ -206,7 +206,7 @@
             </div>
             <div class="properties-zurich-last">
                 <div class="estate-photo">
-                    <img src="../photos/four.jpeg">
+                    <img src="../photos/four.jpeg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
@@ -227,7 +227,7 @@
             <h2>Bern Properties</h2>
             <div class="property-bern">
                 <div class="estate-photo">
-                    <img src="../photos/fourteen.webp">
+                    <img src="../photos/fourteen.webp" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
@@ -244,7 +244,7 @@
             </div>
             <div class="properties-bern">
                 <div class="estate-photo">
-                    <img src="../photos/nine.jpeg">
+                    <img src="../photos/nine.jpeg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
@@ -261,7 +261,7 @@
             </div>
             <div class="properties-bern-house">
                 <div class="estate-photo">
-                    <img src="../photos/one.jpeg">
+                    <img src="../photos/one.jpeg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
@@ -278,7 +278,7 @@
             </div>
             <div class="properties-bern-house-one">
                 <div class="estate-photo">
-                    <img src="../photos/six.jpeg">
+                    <img src="../photos/six.jpeg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
