--- a/buy-files/switzerland.html
+++ b/buy-files/switzerland.html
@@ -295,7 +295,7 @@
             </div>
             <div class="properties-bern-last">
                 <div class="estate-photo">
-                    <img src="../photos/sixteen.jpeg">
+                    <img src="../photos/sixteen.jpeg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
@@ -316,7 +316,7 @@
             <h2>Lucerne Properties</h2>
             <div class="propety-lucerne">
                 <div class="estate-photo">
-                    <img src="../photos/ten.avif">
+                    <img src="../photos/ten.avif" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
