--- a/buy-files/switzerland.html
+++ b/buy-files/switzerland.html
@@ -333,7 +333,7 @@
             </div>
             <div class="properties-lucerne">
                 <div class="estate-photo">
-                    <img src="../photos/thirtin.avif">
+                    <img src="../photos/thirtin.avif" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
@@ -350,7 +350,7 @@
             </div>
             <div class="lucerne-property">
                 <div class="estate-photo">
-                    <img src="../photos/three.jpeg">
+                    <img src="../photos/three.jpeg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
@@ -367,7 +367,6 @@
             </div>
             <div class="lucerne-properties">
                 <div class="estate-photo">
-                    <img src="../photos/twelve.jpeg">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
@@ -384,7 +383,7 @@
             </div>
             <div class="lucerne-last-house">
                 <div class="estate-photo">
-                    <img src="../photos/two.jpeg">
+                    <img src="../photos/two.jpeg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
