--- a/buy-files/switzerland.html
+++ b/buy-files/switzerland.html
@@ -367,6 +367,7 @@
             </div>
             <div class="lucerne-properties">
                 <div class="estate-photo">
+                    <img src="../photos/twelve.jpeg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
