--- a/buy-files/scotland.html
+++ b/buy-files/scotland.html
@@ -49,7 +49,7 @@
             <h2>Edinburgh Properties</h2>
             <div class="property-edinburgh">
                 <div class="estate-photo">
-                    <img src="../photos/house-eight.jpeg">
+                    <img src="../photos/house-eight.jpeg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
@@ -66,7 +66,7 @@
             </div>
             <div class="edinburgh-property">
                 <div class="estate-photo">
-                    <img src="../photos/house-eleven.jpeg">
+                    <img src="../photos/house-eleven.jpeg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
@@ -83,7 +83,7 @@
             </div>
             <div class="properties-edinburgh">
                 <div class="estate-photo">
-                    <img src="../photos/house-five.jpeg">
+                    <img src="../photos/house-five.jpeg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
@@ -100,7 +100,7 @@
             </div>
             <div class="edinburgh-house">
                 <div class="estate-photo">
-                    <img src="../photos/house-four.jpeg">
+                    <img src="../photos/house-four.jpeg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
@@ -117,7 +117,7 @@
             </div>
             <div class="edinburgh-last">
                 <div class="estate-photo">
-                    <img src="../photos/house-house.jpeg">
+                    <img src="../photos/house-house.jpeg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
@@ -138,7 +138,7 @@
             <h2>Glasgow Properties</h2>
             <div class="property-glasglow">
                 <div class="estate-photo">
-                    <img src="../photos/house-nine.jpeg">
+                    <img src="../photos/house-nine.jpeg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
