--- a/buy-files/scotland.html
+++ b/buy-files/scotland.html
@@ -155,7 +155,7 @@
             </div>
             <div class="properties-glasgow">
                 <div class="estate-photo">
-                    <img src="../photos/house-one.png">
+                    <img src="../photos/house-one.png" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
@@ -172,7 +172,7 @@
             </div>
             <div class="property-glasgow-house">
                 <div class="estate-photo">
-                    <img src="../photos/house-seven.jpeg">
+                    <img src="../photos/house-seven.jpeg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
