--- a/buy-files/scotland.html
+++ b/buy-files/scotland.html
@@ -189,7 +189,7 @@
             </div>
             <div class="property-glasgow-house-one">
                 <div class="estate-photo">
-                    <img src="../photos/house-six.jpeg">
+                    <img src="../photos/house-six.jpeg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
@@ -206,7 +206,7 @@
             </div>
             <div class="property-glasgow-last">
                 <div class="estate-photo">
-                    <img src="../photos/house-ten.jpeg">
+                    <img src="../photos/house-ten.jpeg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
