--- a/buy-files/poland.html
+++ b/buy-files/poland.html
@@ -49,7 +49,7 @@
             <h2>Warsaw Properties</h2>
             <div class="property-warsaw">
                 <div class="estate-photo">
-                    <img src="../photos/house-three-copy.jpeg">
+                    <img src="../photos/house-three-copy.jpeg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
@@ -66,7 +66,7 @@
             </div>
             <div class="property-warsaw-house">
                 <div class="estate-photo">
-                    <img src="../photos/house-three.jpeg">
+                    <img src="../photos/house-three.jpeg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
@@ -83,7 +83,7 @@
             </div>
             <div class="property-warsaw-house-one">
                 <div class="estate-photo">
-                    <img src="../photos/house.jpeg">
+                    <img src="../photos/house.jpeg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
@@ -100,7 +100,7 @@
             </div>
             <div class="property-warsaw-house-two">
                 <div class="estate-photo">
-                    <img src="../photos/villa.jpeg">
+                    <img src="../photos/villa.jpeg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
