--- a/buy-files/poland.html
+++ b/buy-files/poland.html
@@ -117,7 +117,7 @@
             </div>
             <div class="property-warsaw-last">
                 <div class="estate-photo">
-                    <img src="../photos/lux.jpeg">
+                    <img src="../photos/lux.jpeg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
@@ -138,7 +138,7 @@
             <h2>Wroclaw Properties</h2>
             <div class="property-wroclaw">
                 <div class="estate-photo">
-                    <img src="../photos/alejandra-cifre-gonzalez-ylyn5r4vxcA-unsplash.jpg">
+                    <img src="../photos/alejandra-cifre-gonzalez-ylyn5r4vxcA-unsplash.jpg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
@@ -155,7 +155,7 @@
             </div>
             <div class="property-wroclaw-house">
                 <div class="estate-photo">
-                    <img src="../photos/banner.jpg">
+                    <img src="../photos/banner.jpg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
@@ -172,7 +172,7 @@
             </div>
             <div class="property-wroclaw-house-one">
                 <div class="estate-photo">
-                    <img src="../photos/Best-Modern-House-Design_-A-New-Era-of-Architecture.webp">
+                    <img src="../photos/Best-Modern-House-Design_-A-New-Era-of-Architecture.webp" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
@@ -189,7 +189,7 @@
             </div>
             <div class="property-wroclaw-house-two">
                 <div class="estate-photo">
-                    <img src="../photos/alan-j-hendry-zVf-R-r3szw-unsplash.jpg">
+                    <img src="../photos/alan-j-hendry-zVf-R-r3szw-unsplash.jpg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
