--- a/buy-files/poland.html
+++ b/buy-files/poland.html
@@ -206,7 +206,7 @@
             </div>
             <div class="property-wroclaw-last">
                 <div class="estate-photo">
-                    <img src="../photos/aubrey-odom-ITzfgP77DTg-unsplash.jpg">
+                    <img src="../photos/aubrey-odom-ITzfgP77DTg-unsplash.jpg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
@@ -227,7 +227,7 @@
             <h2>Gdansk Properties</h2>
             <div class="property-gdansk">
                 <div class="estate-photo">
-                    <img src="../photos/bailey-anselme-Bkp3gLygyeA-unsplash.jpg">
+                    <img src="../photos/bailey-anselme-Bkp3gLygyeA-unsplash.jpg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
@@ -244,7 +244,7 @@
             </div>
             <div class="property-gdansk-house">
                 <div class="estate-photo">
-                    <img src="../photos/canalhermi-xlnTu6BV4x0-unsplash.jpg">
+                    <img src="../photos/canalhermi-xlnTu6BV4x0-unsplash.jpg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
@@ -261,7 +261,7 @@
             </div>
             <div class="property-gdansk-house-one">
                 <div class="estate-photo">
-                    <img src="../photos/Contemporary-House-57123-5-2_43096e0838.jpg">
+                    <img src="../photos/Contemporary-House-57123-5-2_43096e0838.jpg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
