--- a/buy-files/poland.html
+++ b/buy-files/poland.html
@@ -278,7 +278,7 @@
             </div>
             <div class="property-gdansk-house-two">
                 <div class="estate-photo">
-                    <img src="../photos/cube-facade-aurora-double-storey-house-designs.jpg">
+                    <img src="../photos/cube-facade-aurora-double-storey-house-designs.jpg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
@@ -295,7 +295,7 @@
             </div>
             <div class="property-gdansk-last">
                 <div class="estate-photo">
-                    <img src="../photos/daniel-barnes-PyFzygP2eNg-unsplash.jpg">
+                    <img src="../photos/daniel-barnes-PyFzygP2eNg-unsplash.jpg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
@@ -316,7 +316,7 @@
             <h2>Krakow Properties</h2>
             <div class="property-krakow">
                 <div class="estate-photo">
-                    <img src="../photos/daniel-barnes-RKdLlTyjm5g-unsplash.jpg">
+                    <img src="../photos/daniel-barnes-RKdLlTyjm5g-unsplash.jpg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
