--- a/buy-files/poland.html
+++ b/buy-files/poland.html
@@ -333,7 +333,7 @@
             </div>
             <div class="property-krakow-house">
                 <div class="estate-photo">
-                    <img src="../photos/david-samuel-levinson-I3JPit72W_Q-unsplash.jpg">
+                    <img src="../photos/david-samuel-levinson-I3JPit72W_Q-unsplash.jpg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
@@ -350,7 +350,7 @@
             </div>
             <div class="property-krakow-house-one">
                 <div class="estate-photo">
-                    <img src="../photos/david-samuel-levinson-lqqUCTcQsXw-unsplash.jpg">
+                    <img src="../photos/david-samuel-levinson-lqqUCTcQsXw-unsplash.jpg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
@@ -367,7 +367,7 @@
             </div>
             <div class="property-krakow-house-two">
                 <div class="estate-photo">
-                    <img src="../photos/digital-marketing-agency-ntwrk-g39p1kDjvSY-unsplash.jpg">
+                    <img src="../photos/digital-marketing-agency-ntwrk-g39p1kDjvSY-unsplash.jpg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
@@ -384,7 +384,7 @@
             </div>
             <div class="property-krakow-last">
                 <div class="estate-photo">
-                    <img src="../photos/dirty-scan-JVRPGBnCL2s-unsplash.jpg">
+                    <img src="../photos/dirty-scan-JVRPGBnCL2s-unsplash.jpg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
