--- a/buy-files/denmark.html
+++ b/buy-files/denmark.html
@@ -49,7 +49,7 @@
             <h2>Coprnhagen Properties</h2>
             <div class="property-copenhagen">
                 <div class="estate-photo">
-                    <img src="../photos/fabian-wiktor-MBKFuFqlMwo-unsplash.jpg">
+                    <img src="../photos/fabian-wiktor-MBKFuFqlMwo-unsplash.jpg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
@@ -66,7 +66,7 @@
             </div>
             <div class="property-copenhagen-house">
                 <div class="estate-photo">
-                    <img src="../photos/frames-for-your-heart-_KP6mk2Iz8k-unsplash.jpg">
+                    <img src="../photos/frames-for-your-heart-_KP6mk2Iz8k-unsplash.jpg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
