--- a/buy-files/denmark.html
+++ b/buy-files/denmark.html
@@ -83,7 +83,7 @@
             </div>
             <div class="property-copenhagen-house-one">
                 <div class="estate-photo">
-                    <img src="../photos/frames-for-your-heart-jFNQdzwk6U8-unsplash.jpg">
+                    <img src="../photos/frames-for-your-heart-jFNQdzwk6U8-unsplash.jpg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
@@ -100,7 +100,7 @@
             </div>
             <div class="property-copenhagen-house-two">
                 <div class="estate-photo">
-                    <img src="../photos/frames-for-your-heart-mR1CIDduGLc-unsplash.jpg">
+                    <img src="../photos/frames-for-your-heart-mR1CIDduGLc-unsplash.jpg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
@@ -117,7 +117,7 @@
             </div>
             <div class="property-copenhagen-last">
                 <div class="estate-photo">
-                    <img src="../photos/grant-durr-8N6s3Fmw-h0-unsplash.jpg">
+                    <img src="../photos/grant-durr-8N6s3Fmw-h0-unsplash.jpg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
