--- a/buy-files/romaina.html
+++ b/buy-files/romaina.html
@@ -49,7 +49,7 @@
             <h2>Bucharest Properties</h2>
             <div class="property-bucharest">
                 <div class="estate-photo">
-                    <img src="../photos/james-bold-UxCS2kVhZTc-unsplash.jpg">
+                    <img src="../photos/james-bold-UxCS2kVhZTc-unsplash.jpg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
@@ -66,7 +66,7 @@
             </div>
             <div class="property-bucharest-house">
                 <div class="estate-photo">
-                    <img src="../photos/james-day-jUyNP55873k-unsplash.jpg">
+                    <img src="../photos/james-day-jUyNP55873k-unsplash.jpg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
@@ -83,7 +83,7 @@
             </div>
             <div class="property-bucharest-house-one">
                 <div class="estate-photo">
-                    <img src="../photos/lycs-architecture-kUdbEEMcRwE-unsplash.jpg">
+                    <img src="../photos/lycs-architecture-kUdbEEMcRwE-unsplash.jpg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
