--- a/buy-files/romaina.html
+++ b/buy-files/romaina.html
@@ -100,7 +100,7 @@
             </div>
             <div class="property-bucharest-house-two">
                 <div class="estate-photo">
-                    <img src="../photos/nick-romanov-_hw4aUQ81ic-unsplash.jpg">
+                    <img src="../photos/nick-romanov-_hw4aUQ81ic-unsplash.jpg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
@@ -117,7 +117,7 @@
             </div>
             <div class="property-bucharest-last">
                 <div class="estate-photo">
-                    <img src="../photos/nicola-nuttall-ks8cKjLWYK8-unsplash.jpg">
+                    <img src="../photos/nicola-nuttall-ks8cKjLWYK8-unsplash.jpg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
