--- a/buy-files/holland.html
+++ b/buy-files/holland.html
@@ -49,7 +49,7 @@
             <h2>Amesterdam Locations</h2>
             <div class="property-amsterdam">
                 <div class="estate-photo">
-                    <img src="../photos/olga-subach-XbqRB4E-iH4-unsplash.jpg">
+                    <img src="../photos/olga-subach-XbqRB4E-iH4-unsplash.jpg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
@@ -66,7 +66,7 @@
             </div>
             <div class="property-amsterdam-house">
                 <div class="estate-photo">
-                    <img src="../photos/random-institute-B99TTVAdkHQ-unsplash.jpg">
+                    <img src="../photos/random-institute-B99TTVAdkHQ-unsplash.jpg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
