--- a/buy-files/holland.html
+++ b/buy-files/holland.html
@@ -83,7 +83,7 @@
             </div>
             <div class="property-amsterdam-house-one">
                 <div class="estate-photo">
-                    <img src="../photos/r-architecture-2gDwlIim3Uw-unsplash.jpg">
+                    <img src="../photos/r-architecture-2gDwlIim3Uw-unsplash.jpg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
@@ -100,7 +100,7 @@
             </div>
             <div class="property-amsterdan-house-two">
                 <div class="estate-photo">
-                    <img src="../photos/r-architecture-NeN1D7Z3Ick-unsplash.jpg">
+                    <img src="../photos/r-architecture-NeN1D7Z3Ick-unsplash.jpg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
