--- a/buy-files/holland.html
+++ b/buy-files/holland.html
@@ -117,7 +117,7 @@
             </div>
             <div class="property-amsterdam-last">
                 <div class="estate-photo">
-                    <img src="../photos/sebastian-staines-6_8nhHo4fDc-unsplash.jpg">
+                    <img src="../photos/sebastian-staines-6_8nhHo4fDc-unsplash.jpg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
@@ -138,7 +138,7 @@
             <h2>Rotterdam Properties</h2>
             <div class="property-rotterdam">
                 <div class="estate-photo">
-                    <img src="../photos/SiteImage-Landing-modern-house-plans-1.webp">
+                    <img src="../photos/SiteImage-Landing-modern-house-plans-1.webp" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
@@ -155,7 +155,7 @@
             </div>
             <div class="property-rotterdam-house">
                 <div class="estate-photo">
-                    <img src="../photos/tobias-nii-kwatei-quartey-VqWy2xlGK6Q-unsplash.jpg">
+                    <img src="../photos/tobias-nii-kwatei-quartey-VqWy2xlGK6Q-unsplash.jpg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
@@ -172,7 +172,7 @@
             </div>
             <div class="property-rotterdam-house-one">
                 <div class="estate-photo">
-                    <img src="../photos/vj-von-art-BP1Ze0qcp-c-unsplash.jpg">
+                    <img src="../photos/vj-von-art-BP1Ze0qcp-c-unsplash.jpg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
@@ -189,7 +189,7 @@
             </div>
             <div class="property-rotterdam-house-two">
                 <div class="estate-photo">
-                    <img src="../photos/w991x660.jpg">
+                    <img src="../photos/w991x660.jpg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
@@ -206,7 +206,7 @@
             </div>
             <div class="property-rotterdam-last">
                 <div class="estate-photo">
-                    <img src="../photos/walter-sturn--_folCc8Q8k-unsplash.jpg">
+                    <img src="../photos/walter-sturn--_folCc8Q8k-unsplash.jpg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
