--- a/buy-files/norway.html
+++ b/buy-files/norway.html
@@ -49,7 +49,7 @@
             <h2>Oslo Properties</h2>
             <div class="property-oslo">
                 <div class="estate-photo">
-                    <img src="../photos/webaliser-_TPTXZd9mOo-unsplash.jpg">
+                    <img src="../photos/webaliser-_TPTXZd9mOo-unsplash.jpg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
@@ -66,7 +66,7 @@
             </div>
             <div class="property-oslo-house">
                 <div class="estate-photo">
-                    <img src="../photos/zac-gudakov-5QLCohwVndQ-unsplash.jpg">
+                    <img src="../photos/zac-gudakov-5QLCohwVndQ-unsplash.jpg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
