--- a/buy-files/norway.html
+++ b/buy-files/norway.html
@@ -81,6 +81,11 @@
                     </div>
                 </div>
             </div>
+            <div class="property-oslo-house-one">
+                <div class="estate-photo">
+                    <img src="../photos/bailey-anselme-Bkp3gLygyeA-unsplash.jpg" alt="picture of the exterior of a house we have for sell">
+                </div>
+            </div>
         </div>
     </main>
 
