--- a/buy-files/norway.html
+++ b/buy-files/norway.html
@@ -85,6 +85,18 @@
                 <div class="estate-photo">
                     <img src="../photos/bailey-anselme-Bkp3gLygyeA-unsplash.jpg" alt="picture of the exterior of a house we have for sell">
                 </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>5 Bedrooms, 6 Bathrooms, Kitchen, Living Room, Dinning Room, 2 Office Rooms, Basement, Pool, BBQ Area, 4 Cars Garage</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$9.990.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
