--- a/buy-files/norway.html
+++ b/buy-files/norway.html
@@ -115,6 +115,22 @@
                     </div>
                 </div>
             </div>
+            <div class="proerpty-oslo-last">
+                <div class="estate-photo">
+                    <img src="../photos/vj-von-art-BP1Ze0qcp-c-unsplash.jpg" alt="picture of the exterior of a house we have for sell">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>5 Bedrooms, 6 Bathrooms, Kitchen, Living Room, Dinning Room, 2 Office Rooms, Basement, Pool, BBQ Area, 4 Cars Garage</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$3.920.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                </div>
+            </div>
         </div>
     </main>
 
