--- a/buy-files/norway.html
+++ b/buy-files/norway.html
@@ -132,6 +132,10 @@
                 </div>
             </div>
         </div>
+
+        <div class="estate-bergen">
+            <h2>Bergen Properties</h2>
+        </div>
     </main>
 
    <!--Footer-->
