--- a/buy-files/norway.html
+++ b/buy-files/norway.html
@@ -152,6 +152,17 @@
                     </div>
                 </div>
             </div>
+            <div class="proerpty-bergen">
+                <div class="estate-photo">
+                    <img src="../photos/alejandra-cifre-gonzalez-ylyn5r4vxcA-unsplash.jpg" alt="picture of the exterior of a house we have for sell">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>5 Bedrooms, 6 Bathrooms, Kitchen, Living Room, Dinning Room, 2 Office Rooms, Basement, Pool, BBQ Area, 4 Cars Garage</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 
