--- a/buy-files/norway.html
+++ b/buy-files/norway.html
@@ -161,6 +161,12 @@
                         <h1>221 Baker Street</h1>
                         <p>5 Bedrooms, 6 Bathrooms, Kitchen, Living Room, Dinning Room, 2 Office Rooms, Basement, Pool, BBQ Area, 4 Cars Garage</p>
                     </div>
+                    <div class="estate-price">
+                        <p><b>$5.987.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
                 </div>
             </div>
         </div>
