--- a/buy-files/norway.html
+++ b/buy-files/norway.html
@@ -203,6 +203,23 @@
                     </div>
                 </div>
             </div>
+            <div class="proerpty-bergen-last">
+                <div class="estate-photo">
+                    <img src="../photos/david-samuel-levinson-I3JPit72W_Q-unsplash.jpg" alt="picture of the exterior of a house we have for sell">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>5 Bedrooms, 6 Bathrooms, Kitchen, Living Room, Dinning Room, 2 Office Rooms, Basement, Pool, BBQ Area, 4 Cars Garage</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$5.250.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 
