--- a/buy-files/norway.html
+++ b/buy-files/norway.html
@@ -221,6 +221,10 @@
                 </div>
             </div>
         </div>
+
+        <div class="estate-stavanger wrap">
+            <h2>Stavanger Properties</h2>
+        </div>
     </main>
 
    <!--Footer-->
