--- a/buy-files/norway.html
+++ b/buy-files/norway.html
@@ -224,6 +224,23 @@
 
         <div class="estate-stavanger wrap">
             <h2>Stavanger Properties</h2>
+            <div class="proerpty-stavanger">
+                <div class="estate-photo">
+                    <img src="../photos/cube-facade-aurora-double-storey-house-designs.jpg" alt="picture of the exterior of a house we have for sell">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>5 Bedrooms, 6 Bathrooms, Kitchen, Living Room, Dinning Room, 2 Office Rooms, Basement, Pool, BBQ Area, 4 Cars Garage</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$5.550.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 
