--- a/buy-files/norway.html
+++ b/buy-files/norway.html
@@ -310,6 +310,10 @@
                 </div>
             </div>
         </div>
+
+        <div class="estate-trondheimg wrap">
+            <h2>Trondheimg Properties</h2>
+        </div>
     </main>
 
    <!--Footer-->
