--- a/buy-files/norway.html
+++ b/buy-files/norway.html
@@ -313,6 +313,11 @@
 
         <div class="estate-trondheimg wrap">
             <h2>Trondheimg Properties</h2>
+            <div class="proerpty-trondheimg">
+                <div class="estate-photo">
+                    <img src="../"
+                </div>
+            </div>
         </div>
     </main>
 
