--- a/buy-files/norway.html
+++ b/buy-files/norway.html
@@ -315,7 +315,19 @@
             <h2>Trondheimg Properties</h2>
             <div class="proerpty-trondheimg">
                 <div class="estate-photo">
-                    <img src="../"
+                    <img src="../photos/house-house.jpeg" alt="picture of the exterior of a house we have for sell">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>5 Bedrooms, 6 Bathrooms, Kitchen, Living Room, Dinning Room, 2 Office Rooms, Basement, Pool, BBQ Area, 4 Cars Garage</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$15.500.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
                 </div>
             </div>
         </div>
