--- a/buy-files/norway.html
+++ b/buy-files/norway.html
@@ -330,6 +330,11 @@
                     </div>
                 </div>
             </div>
+            <div class="property-trondheim">
+                <div class="estate-photo">
+                    <img src="../photos/house-three-copy.jpeg" alt="picture of the exterior of a house we have for sell">
+                </div>
+            </div>
         </div>
     </main>
 
