--- a/buy-files/norway.html
+++ b/buy-files/norway.html
@@ -312,7 +312,7 @@
         </div>
 
         <div class="estate-trondheimg wrap">
-            <h2>Trondheimg Properties</h2>
+            <h2>Trondheim Properties</h2>
             <div class="proerpty-trondheimg">
                 <div class="estate-photo">
                     <img src="../photos/house-house.jpeg" alt="picture of the exterior of a house we have for sell">
